@@ -8,6 +8,8 @@
 // -----------------------------------------------
 
 // 8/1/2024
+- Created Parser.js
+----
 - Now the language reads and interprets files
 - Added "--lexer" argument
 - Created "tests" folder
